<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:fillViewport="true"
    tools:context=".pages.RegisterPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/clRootRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cvRegisterDp"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:elevation="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/user"
            android:translationZ="24dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/cvRegisterDp"
            app:layout_constraintEnd_toStartOf="@+id/cvRegisterDp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cvRegisterDp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee_registration"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvRegisterDp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textCapSentences"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:minHeight="80dp"
                    android:gravity="top"
                    android:imeOptions="actionNext"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qualification"
                    android:inputType="textCapSentences"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blood_group"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/land"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:text="@string/job_details"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textCapSentences"
                    android:layout_height="wrap_content"
                    android:hint="@string/company_name"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textCapSentences"
                    android:layout_height="wrap_content"
                    android:hint="@string/working_branch"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textCapSentences"
                    android:layout_height="wrap_content"
                    android:hint="@string/department"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textCapSentences"
                    android:layout_height="wrap_content"
                    android:hint="@string/designation"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/joing_date"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textCapSentences"
                    android:layout_height="wrap_content"
                    android:hint="@string/job_type"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textCapSentences"
                    android:layout_height="wrap_content"
                    android:hint="@string/reporting_to"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:text="@string/login_details"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_password"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/mt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:textAllCaps="false"
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/text"
                android:minHeight="52dp"
                android:textStyle="bold"
                android:text="@string/create_account"/>

            <Button
                android:id="@+id/btnGoBack"
                android:background="@null"
                android:layout_marginTop="16dp"
                android:text="@string/go_back"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>