<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:fillViewport="true"
    tools:context=".pages.LoginPage">

    <LinearLayout
        android:id="@+id/llLoginRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            app:lottie_autoPlay="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            app:lottie_rawRes="@raw/fingerprint" />

        <LinearLayout
            android:id="@+id/llLogin"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmpId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="8dp"
                    android:hint="@string/employee_id"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/text"
                android:minHeight="52dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCreateAccount"
                android:background="@null"
                android:layout_marginTop="16dp"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>